# NovelPanel

./: .gitignore  CHANGELOG.md  README.en.md  README.md  config.example.json  main.py  pyproject.toml  test_config.py
docs/: EDITABLE_TEXT_COMPONENT.md  UI_SIZE_CONSTANTS.md  configuration.md
resources/: openapi.json
src/: __mcp__.py  app.py  main.py
src/components/: __init__.py  async_image.py  async_media.py  dialogs.py  editable_card.py  editable_text.py
src/components/actor_card/: __init__.py  actor_card.py  actor_detail_dialog.py  actor_example_dialog.py
src/components/chat/: __init__.py  chat_input_area.py  chat_message_display.py  chat_sidebar.py
src/components/model_card/: __init__.py  example_image_dialog.py  model_detail_dialog.py
src/constants/: __init__.py  actor.py  civitai.py  color.py  llm.py  memory.py  model_meta.py  ui.py  ui_size.py
src/controllers/: __init__.py
src/pages/: __init__.py  actor_manage_page.py  app.py  chat_page.py  content_manage_page.py  help_page.py  home_page.py  memory_manage_page.py  model_manage_page.py  settings_page.py
src/routers/: __init__.py  actor.py  draw.py  file.py  llm.py  memory.py  novel.py  reader.py  session.py
src/schemas/: __init__.py  actor.py  chat.py  draw.py  memory.py  model.py  model_meta.py  novel.py  session.py
src/services/: __init__.py  civitai.py  llm.py  model_meta.py  novel_parser.py  sd_forge.py  transform.py
src/services/base/: __init__.py  draw.py
src/services/db/: __init__.py  actor_service.py  base.py  character_service.py  draw_service.py  memory_service.py  novel_service.py  session_service.py
src/services/draw/: __init__.py  base.py  civitai.py  sd_forge.py
src/services/llm/: __init__.py  base.py  ollama.py  openai.py
src/services/model_meta/: __init__.py  base.py  civitai.py  local.py
src/services/model_meta_provider/: __init__.py  civitai.py  local.py
src/settings/: __init__.py  app_setting.py  civitai_setting.py  config_manager.py  draw_setting.py  llm_setting.py  model_meta_setting.py  path.py  sd_forge_setting.py  ui_setting.py
src/utils/: __init__.py  civitai.py  download.py  hash.py  path.py
tests/civitai/: civitai_response.json  测试civitai.py
tests/sd_forge/: test_txt2img.py
tests/test_flet/: 可观察对象.py
