[project]
name = "NovelPanel"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "aiofiles>=25.1.0",
  "fastapi-mcp>=0.4.0",
  "flet[all]==0.28.3",
  "loguru>=0.7.3",
  "pillow>=11.3.0",
  "pydantic-settings>=2.11.0",
  "pylint>=4.0.2",
  "pytest>=8.4.2",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "NovelPanel"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
